# yaml2terragrunt

./: PUBLISH-PYPI-PKG.md  README.md  approach.md  pyproject.toml
.devcontainer/: Dockerfile
.github/: CONTRIBUTING.md
.github/actions/node-npm-setup/: action.yml
.github/workflows/: azure-prod-build-deploy.yml  azure-staging-build-deploy.yml  docs-review-collect.yml  os-ready-for-review.yml  package-lock-lint.yml  ready-for-doc-review.yml
assets/: ghes-3-12-opentelemetry-attribute-mappings.csv  ghes-3.10-opentelemetry-attribute-mappings.csv
contributing/: README.md  development.md
